@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+common/living.c: fix comments.
+common/object.c: dump owner too.
+server/plugins.c: check values for cfapi_map_get_object_at(). Handle FLAG_FRIENDLY
+ and friendlist.
+Nicolas Weeger 2007-04-15
+
 Enable plugins to change the 'path' property of a map.
  plugins/cfpython/cfpython_map.c
  plugins/cfpython/include/cfpython_map_private.h
